# serializer version: 1
# name: test_all_switch_entities_snapshot[switch.focused_einstein_container_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.focused_einstein_container_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Container on/off',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'container_on_off',
    'unique_id': 'portainer_test_entry_123_focused_einstein_container_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switch_entities_snapshot[switch.focused_einstein_container_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'focused_einstein Container on/off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.focused_einstein_container_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_switch_entities_snapshot[switch.funny_chatelet_container_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.funny_chatelet_container_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Container on/off',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'container_on_off',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_container_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switch_entities_snapshot[switch.funny_chatelet_container_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'funny_chatelet Container on/off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.funny_chatelet_container_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_switch_entities_snapshot[switch.practical_morse_container_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.practical_morse_container_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Container on/off',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'container_on_off',
    'unique_id': 'portainer_test_entry_123_practical_morse_container_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switch_entities_snapshot[switch.practical_morse_container_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'practical_morse Container on/off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.practical_morse_container_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_switch_entities_snapshot[switch.serene_banach_container_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.serene_banach_container_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Container on/off',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'container_on_off',
    'unique_id': 'portainer_test_entry_123_serene_banach_container_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switch_entities_snapshot[switch.serene_banach_container_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'serene_banach Container on/off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.serene_banach_container_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_switch_entities_snapshot[switch.stoic_turing_container_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.stoic_turing_container_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Container on/off',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'container_on_off',
    'unique_id': 'portainer_test_entry_123_stoic_turing_container_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switch_entities_snapshot[switch.stoic_turing_container_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'stoic_turing Container on/off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.stoic_turing_container_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
